<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_backgroud"
    android:orientation="vertical"
    tools:context=".QuestionPage">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@drawable/btn_back" />

        <TextView
            android:id="@+id/topicName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/boba_milky"
            android:text="@string/nama_topik_yang_dipilih"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/baseline_timer_24_white" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/_00_59"
                android:textColor="#FAA72F" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/questions"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_back_white10"
        android:elevation="1dp"
        android:gravity="center"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/_1_10"
        android:textColor="#1F6BB8"
        android:fontFamily="@font/poppins_regular"/>

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_light_yellow20"
        android:gravity="center"
        android:minHeight="100dp"
        android:padding="20dp"
        android:text="@string/pertanyaan_akan_datang_ke_sini"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_regular"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_stroke2_10"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/option_1"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_stroke2_10"
        android:text="@string/option_2"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_stroke2_10"
        android:text="@string/option_3"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_stroke2_10"
        android:text="@string/option_4"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_green"
        android:text="@string/lanjut"
        android:textSize="16sp"
        android:fontFamily="@font/boba_milky"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />
</LinearLayout>